[package]
name = "polygon_arbitrage_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "1.0.0", features = ["abigen", "tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
anyhow = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
rusqlite = { version = "0.29", features = ["bundled"] }
hex = "0.4"
dotenv = "0.15"
